--- a/src/Components/item/Styles.css
+++ b/src/Components/item/Styles.css
@@ -1,5 +1,11 @@
+
 .Card{
-    margin-top: 150px;
+    margin-top: 100px;
+    min-width: 290px;
+    box-sizing: border-box;
+    margin-top: 80px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 .Heart-Icon_Card{
   
