--- a/src/Components/ItemList/styles.css
+++ b/src/Components/ItemList/styles.css
@@ -1,4 +1,8 @@
-itemContainer{
+.itemContainer{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1400px;
+    margin: 0 auto;
     
 }
