--- a/src/Components/item/Styles.css
+++ b/src/Components/item/Styles.css
@@ -1,16 +1,26 @@
+.Card {
+  margin-top: 100px;
+  min-width: 290px;
+  box-sizing: border-box;
+  margin-top: 80px;
+  margin-right: 20px;
+  margin-left: 20px;
+  cursor: pointer;
+  display: 'flex';
+  width: 100%;
+   height: 100%;
 
-.Card{
-    margin-top: 100px;
-    min-width: 290px;
-    box-sizing: border-box;
-    margin-top: 80px;
-    margin-right: 20px;
-    margin-left: 20px;
-    cursor: pointer;
 }
-.Heart-Icon_Card{
-  
-    width: 20px;
-    height: 20px; 
-    border-radius: 10px;
+.card__btn {
+  width: 120px;
+  height: 38px;
+}
+.product-img {
+  width: 350px;
+  height: 250px;
+}
+.Heart-Icon_Card {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
 }
