--- a/src/Components/item/Styles.css
+++ b/src/Components/item/Styles.css
@@ -6,10 +6,9 @@
   margin-right: 20px;
   margin-left: 20px;
   cursor: pointer;
-  display: 'flex';
+  display: "flex";
   width: 100%;
-   height: 100%;
-
+  height: 100%;
 }
 .card__btn {
   width: 120px;
@@ -18,9 +17,4 @@
 .product-img {
   width: 350px;
   height: 250px;
-}
-.Heart-Icon_Card {
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
 }
